--- a/2022-2023/T3A/06_VolebniGraf/06_VolebniGraf/06_VolebniGraf.csproj
+++ b/2022-2023/T3A/06_VolebniGraf/06_VolebniGraf/06_VolebniGraf.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <RootNamespace>_02_RozdeleniTymu</RootNamespace>
+    <RootNamespace>_06_VolebniGraf</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
