prakticka + cviceni pgm

--- a/2023-2024/T4Acviceni/03_DemoWeb/03_DemoWeb/appsettings.json
+++ b/2023-2024/T4Acviceni/03_DemoWeb/03_DemoWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "_03_DemoWebContext": "Server=(localdb)\\mssqllocaldb;Database=_03_DemoWebContext-9ada02af-4f9b-4fe8-b444-53f63cb2ed26;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
