--- a/2023-2024/T4Acviceni/03_DemoWeb/03_DemoWeb/03_DemoWeb.csproj
+++ b/2023-2024/T4Acviceni/03_DemoWeb/03_DemoWeb/03_DemoWeb.csproj
@@ -7,4 +7,13 @@
     <RootNamespace>_03_DemoWeb</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.12" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.12">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.11" />
+  </ItemGroup>
+
 </Project>
